--- a/genericAPI/genericAPI/src/main/resources/application.properties
+++ b/genericAPI/genericAPI/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=9080
+
+#MySql Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/bankdemo
+spring.datasource.username=root
+spring.datasource.password=!BeckerMarine9
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+
+#Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 
